--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Our Story</a></li>
                 <li><a href="#">Cart</a></li>
