--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Our Story</a></li>
