--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Search</a></li>
                 <li><a href="#">Our Story</a></li>
-                <li><a href="#">Cart</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
     </header>
