--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,29 @@
         </nav>
     </header>
     <main>
-        
+        <div class="cart-container">
+            <div class="cart-item">
+                <img src="./Images/product2.png" alt="Item 1">
+                <div class="item-details">
+                    <p class="item-description">Item 1 Description</p>
+                    <div class="item-actions">
+                        <button class="add-button">Add</button>
+                        <input type="number" value="1" min="1" class="amount-button">
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="cart-item">
+                <img src="./Images/product1.jpg" alt="Item 2">
+                <div class="item-details">
+                    <p class="item-description">Item 2 Description</p>
+                    <div class="item-actions">
+                        <button class="add-button">Add</button>
+                        <input type="number" value="1" min="1" class="amount-button">
+                    </div>
+                </div>
+            </div>
+        </div>
         
     </main>
     <footer>
