--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,8 @@
             <div class="cart-item">
                 <img src="./Images/product2.png" alt="Item 1">
                 <div class="item-details">
-                    <p class="item-description">Item 1 Description</p>
+                    <p class="item-description"><strong>Green Tea Seed</strong>
+                        Moisture-barrier strengthening solution</p>
                     <div class="item-actions">
                         <button class="add-button">Add</button>
                         <input type="number" value="1" min="1" class="amount-button">
